Various, including fixing sleep start and end time plotting

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -4,6 +4,7 @@ BODY {
     /* TODO: which of these should it be? */
     background:       #f0e0b0; /* vellum */
     background-color: #f0e0b0; /* vellum */
+    scrollbar-color:  #e0d0a0 #f0e0b0;
 
     font-family:      sans-serif;
     font-size:        small;
