Various changes including getting sunrise and sunset

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -149,6 +149,10 @@ div[name="past_week"] {
     display: none;
 }
 
+td.weather {
+    text-align: center;
+}
+
 .activity_logger {
     background:     #e0d0a0;
     color:          maroon;
