--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -204,6 +204,8 @@ p.bible_verse {
     line-height: 1.25em;
     margin-top: .25em;
     margin-bottom: .25em;
+    margin-left: 1em;
+    text-indent: -1em;
 }
 
 span.verse_number {
